# henry-whisper

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  styles.css
ipc-gen/: Cargo.toml
ipc-gen/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: app.rs  main.rs
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/assets/: assets
src-tauri/examples/: basic.rs
src-tauri/icons/: icon.icns  tray-icon.rgba
src-tauri/src/: ai.rs  audio.rs  commands.rs  lib.rs  main.rs  recording.rs  settings.rs  shortcuts.rs  state.rs
src-tauri/src/app/: commands.rs  mod.rs  polish.md  recording.rs  settings.rs  shortcuts.rs  state.rs  transcribe_and_post.md  tray.rs
src/app/: ipc.rs  ipc_generated.rs  mod.rs  settings.rs  shortcut_recorder.rs
src/ipc/: generated.rs  mod.rs
