[package]
name = "henry-whisper-ui"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.8", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["KeyboardEvent", "FocusEvent"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
serde_json = { workspace = true }
serde = { workspace = true }
henry-whisper-shared = { workspace = true }

[workspace.dependencies]
henry-whisper-shared = { path = "shared" }
henry-whisper-ipc-gen = { path = "ipc-gen" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace]
members = ["shared", "ipc-gen", "src-tauri"]

[profile.dev]
opt-level = 1
incremental = false

[profile.dev.package."*"]
opt-level = 3
