[package]
name = "henry-whisper"
version = "0.1.0"
description = "A tiny desktop dictation app"
authors = ["you"]
edition = "2024"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "henry_whisper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { workspace = true }
serde_json = { workspace = true }
henry-whisper-shared = { workspace = true }
cpal = "0.17.3"
hound = "3.5.1"
mp3lame-encoder = "0.2.3"
async-openai = { version = "0.34.0", features = ["audio"] }
reqwest = { version = "0.13.2", default-features = false, features = [
  "multipart",
] }
arboard = "3.6.1"
rodio = "0.22"
tokio = { version = "1.15.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-util = "0.7.18"
ringbuf = "0.4.8"
crossbeam-channel = "0.5.15"
base64 = "0.22.1"
value = "0.1.1"
anyhow = "1.0.102"
